--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-flask==2.3.3
-supabase==1.0.4
+Flask==3.0.0
+gunicorn==21.2.0
+supabase==2.0.0
 requests==2.31.0
 pydub==0.25.1
-gunicorn==21.2.0
+python-dotenv==1.0.0
